--- a/DemoCss/DemoCss/DemoCss.Android/DemoCss.Android.csproj
+++ b/DemoCss/DemoCss/DemoCss.Android/DemoCss.Android.csproj
@@ -88,13 +88,15 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DemoCss\DemoCss.csproj">
       <Project>{10C0ACF7-58E6-4791-8E40-4A6DC0E2DED1}</Project>
       <Name>DemoCss</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
