--- a/DemoCss/DemoCss/DemoCss.UWP/DemoCss.UWP.csproj
+++ b/DemoCss/DemoCss/DemoCss.UWP/DemoCss.UWP.csproj
@@ -143,6 +143,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="LiveXAML">
+      <Version>2.1.22</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.530893" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5" />
   </ItemGroup>
