--- a/DemoCss/DemoCss/DemoCss/DemoCss.csproj
+++ b/DemoCss/DemoCss/DemoCss/DemoCss.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiveXAML" Version="2.1.22" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.530893" />
   </ItemGroup>
 </Project>
